[package]
name = "collectables"
version = "2.0.1"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
edition = "2018"
description = "Collectables: Rust crate of collections helpers for BTreeMap, BTreeSet, HashMapSet, etc. By SixArm.com."
readme = "README.md"
repository = "https://github.com/sixarm/collectables-rust-crate/"
license = "MIT OR Apache-2.0 OR GPL-2.0-only"
keywords = ["collections", "btree", "hash", "map", "set"]
categories = ["algorithms", "data-structures", "rust-patterns"]

[dependencies]
assertables = "3"
